# exprl_cpp

./: CMakeLists.txt  README.md  conanfile.txt
src/: ExpressionEvaluator.h  Globals.h
src/eval/: Context.cpp  EvaluationException.cpp  Expression.cpp  Variable.cpp
src/eval/impl/: AddExpression.cpp  AndExpression.cpp  ConcatExpression.cpp  CondExpression.cpp  DebugExpression.cpp  DivExpression.cpp  EndsExpression.cpp  EqExpression.cpp  GtExpression.cpp  GteExpression.cpp  InExpression.cpp  LenExpression.cpp  LiteralExpression.cpp  LiteralVarExpression.cpp  LtExpression.cpp  LteExpression.cpp  MaxExpression.cpp  MinExpression.cpp  ModExpression.cpp  MulExpression.cpp  NeqExpression.cpp  NotExpression.cpp  OrExpression.cpp  StartsExpression.cpp  SubExpression.cpp  SubstrExpression.cpp  SubstrlExpression.cpp  VarExpression.cpp
src/eval/impl/include/: AddExpression.h  AndExpression.h  ConcatExpression.h  CondExpression.h  DebugExpression.h  DivExpression.h  EndsExpression.h  EqExpression.h  GtExpression.h  GteExpression.h  InExpression.h  LenExpression.h  LiteralExpression.h  LiteralVarExpression.h  LtExpression.h  LteExpression.h  MaxExpression.h  MinExpression.h  ModExpression.h  MulExpression.h  NeqExpression.h  NotExpression.h  OrExpression.h  StartsExpression.h  SubExpression.h  SubstrExpression.h  SubstrlExpression.h  VarExpression.h
src/eval/include/: Context.h  EvaluationException.h  Expression.h  Variable.h
src/parser/: Parser.cpp
src/parser/include/: Parser.h
src/util/: ExpressionUtilities.cpp  StringUtilities.cpp
src/util/include/: ExpressionUtilities.h  StringUtilities.h
test/: ExpressionEvaluatorTest.cpp
test/eval/: ExpressionTest.cpp
test/parser/: ParserTest.cpp
